# src/app/shared/api/endpoints/models.ts
@@ -1,3 +1,4 @@
 export { ArticleModel } from './models/article-model';
 export { QueryResultModel } from './models/query-result-model';
 export { QueryModel } from './models/query-model';
+export { IndexStatus } from './models/index-status';
