# src/app/shared/api/endpoints/models/index-status.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface IndexStatus {
+  initialized?: boolean;
+}
